--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.0",
+    "@types/nodemailer": "^6.4.0",
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
