--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@material-ui/core": "^4.10.1",
     "@material-ui/icons": "^4.9.1",
+    "@sendgrid/mail": "^7.2.0",
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
     "@types/nodemailer": "^6.4.0",
@@ -26,5 +27,5 @@
     "@types/node": "^14.0.13",
     "typescript": "^3.9.5"
   },
-  "proxy": "http://localhost:4444/"
+  "proxy": "http://localhost:3030"
 }
